--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         </div>
       </nav>
 </header>
+        <h1>hiiiiiiiiiii</h1>
         <section>
             <div class="setting">
 <i class="fas fa-cog fa-spin"></i>
