--- a/index.html
+++ b/index.html
@@ -181,6 +181,13 @@
             <h5 class=" position-relative">category</h5>
             <p class=" position-relative">broject tittl</p>
           </div>
+                  <div class="col-md-4">
+          <div class="work position-relative ">
+          <img class=" img-fluid" src="images/6.jpg">
+          <div class="hello flex-column d-flex">
+            <h5 class=" position-relative">category</h5>
+            <p class=" position-relative">broject tittl</p>
+          </div>
         </div>
         </div>
       </div>
